<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_question_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:context="com.zybooks.studyhelper.QuestionActivity">

        <TextView
            android:id="@+id/no_question_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_questions"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_question_button" />

        <Button
            android:id="@+id/add_question_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_question"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/show_question_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context="com.zybooks.studyhelper.QuestionActivity">

        <TextView
            android:id="@+id/question_label_text_view"
            style="@style/QALabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RecipeLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="206dp"
            android:layout_height="66dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="5dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/question_label_text_view"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="question" />

        <TextView
            android:id="@+id/answer_label_text_view"
            style="@style/QALabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="49dp"
            android:layout_marginBottom="10dp"
            android:text="@string/IngredientLabel"
            app:layout_constraintBottom_toTopOf="@+id/answer_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_label_text_view" />

        <TextView
            android:id="@+id/instruction_label_text_view"
            style="@style/QALabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="49dp"
            android:layout_marginBottom="305dp"
            android:text="@string/InstructionLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.548"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answer_text_view"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/answer_text_view"
            android:layout_width="380dp"
            android:layout_height="150dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/answer_label_text_view"
            app:layout_constraintVertical_bias="0.156"
            tools:text="answer" />

        <TextView
            android:id="@+id/instruction_text_view"
            android:layout_width="377dp"
            android:layout_height="232dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="25dp"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_label_text_view"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Instructions" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>